test/compflags/lydia/constructorError/hasConstructor.good
hasConstructor.chpl:4: error: Type 'Foo' defined a constructor here
